--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Nang site</title>
-<link href="./stupidcssforafont.css" rel="stylesheet">
-<link href="./output.css" rel="stylesheet">
+<link href="output.css" rel="stylesheet">
 
 <style>
     html { scroll-behavior: smooth; }
