--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
             '"walking around b***k? thats illegal!!" - luigi_cars',
             '"can i walk inside your house?" - nang',
             '"true friends dont debt eachother" - gavin christiansn',
-            'listen to tuyu',
+            '"listen to tuyu"',
             '"my hubris harmed others and pride let down others" - some cool quote from steins gate',
-            'sing us a song youre the piano man',
+            '"sing us a song youre the piano man"',
+            '"if you ever feel unmotivated remember nang exists to ruin your life" - mintill (moppies)',
+            '"Schrödingers ass hair `didnt exist until i scratched there`" - Divine of 아메리카',
+            '"If colorado was its own country it would be a third world" - Redefined(roamco)',
             '"you should probably say that once youve actually done it yourself" - some guy on the internet'
+
         ];
         function setRandomQuote() {
             const randomIndex = Math.floor(Math.random() * quotes.length);
